--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -223,6 +223,18 @@
   <string name="tts_lang_not_available">No está disponible el idioma.</string>
   <string name="speak_queue">Cola</string>
   <string name="speak_repeat">Repetir</string>
+  <!--Speak - Bible-->
+  <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
+  <!--List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
   <!--User Notes-->
   <string name="mynotes">Mis Notas</string>
   <string name="mynote">Mi Nota</string>
@@ -271,5 +283,6 @@
   <string name="error_page_too_large">La página es muy grande como para ser cargada</string>
   <string name="error_key_not_in_document">No encontrado en el documento</string>
   <string name="empty_list">No hay ítems para mostrar</string>
+  <!--Notifications-->
   <string name="notification_channel_progress_status">Notificación de estado de progreso para descarga de documentos etc.</string>
 </resources>
