--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -220,6 +220,18 @@
   <string name="tts_lang_not_available">Ez a nyelv nem érhető el.</string>
   <string name="speak_queue">Sorba állítás</string>
   <string name="speak_repeat">Ismétlés</string>
+  <!--Speak - Bible-->
+  <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
+  <!--List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
   <!--User Notes-->
   <string name="mynotes">Jegyzeteim</string>
   <string name="mynote">Jegyzetem</string>
@@ -267,4 +279,5 @@
   <string name="error_page_too_large">Az oldal túl nagy a betöltéshez</string>
   <string name="error_key_not_in_document">A dokumentumban nem található.</string>
   <string name="empty_list">Nincs megtekinthető elem</string>
+  <!--Notifications-->
 </resources>
