--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -181,6 +181,18 @@
   <string name="tts_lang_not_available">భాష లభించడం లేదు.</string>
   <string name="speak_queue">వరుస</string>
   <string name="speak_repeat">మళ్లీచేయండి</string>
+  <!--Speak - Bible-->
+  <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
+  <!--List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
   <!--User Notes-->
   <string name="mynotes">నా నోట్స్</string>
   <string name="mynote">నా నోట్</string>
@@ -223,4 +235,5 @@
   <string name="error_page_too_large">లోడ్ చేయలేనంత పెద్ద పేజి</string>
   <string name="error_key_not_in_document">డాక్యుమెంటులో లేదు</string>
   <string name="empty_list">చూపించడానికి ఏమి లేవు</string>
+  <!--Notifications-->
 </resources>
