--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -171,6 +171,18 @@
   <string name="tts_lang_not_available">Ngôn ngữ không có sẵn.</string>
   <string name="speak_queue">Hàng đợi</string>
   <string name="speak_repeat">Đọc lại</string>
+  <!--Speak - Bible-->
+  <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
+  <!--List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
   <!--User Notes-->
   <string name="mynotes">Ghi chú của tôi</string>
   <string name="mynote">Ghi chú của tôi</string>
@@ -209,4 +221,5 @@
   <string name="error_page_too_large">Trang quá lớn để nạp</string>
   <string name="error_key_not_in_document">Không tìm thấy trong tài liệu</string>
   <string name="empty_list">Không có mục nào để hiển thị</string>
+  <!--Notifications-->
 </resources>
