--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -173,6 +173,18 @@ Press Speak to access a dialog to start or stop reading\n \n\n<b>My Note</b>\nNo
   <string name="tts_lang_not_available">اللغة غير متاحة</string>
   <string name="speak_queue">بانتظام</string>
   <string name="speak_repeat">كرر</string>
+  <!--Speak - Bible-->
+  <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
+  <!--List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
   <!--User Notes-->
   <string name="mynotes">ملاحظاتي</string>
   <string name="mynote">ملاحظتي</string>
@@ -214,4 +226,5 @@ Press Speak to access a dialog to start or stop reading\n \n\n<b>My Note</b>\nNo
   <string name="error_page_too_large">لا نستطيع تحميل الصفحة لأنها كبيرة جدا</string>
   <string name="error_key_not_in_document">لا يوجد مستند</string>
   <string name="empty_list">لا يوجد مواد للعرض</string>
+  <!--Notifications-->
 </resources>
