--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -216,6 +216,18 @@
   <string name="tts_lang_not_available">Мова недаступная.</string>
   <string name="speak_queue">Чарга</string>
   <string name="speak_repeat">Паўтор</string>
+  <!--Speak - Bible-->
+  <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
+  <!--List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
   <!--User Notes-->
   <string name="mynotes">Нататкі</string>
   <string name="mynote">Нататка</string>
@@ -263,4 +275,5 @@
   <string name="error_page_too_large">Старонка надта вялікая для загрузкі</string>
   <string name="error_key_not_in_document">Ня знойдзена ў дакумэнце</string>
   <string name="empty_list">Няма нічога для адлюстраваньня</string>
+  <!--Notifications-->
 </resources>
