--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -171,6 +171,18 @@
   <string name="tts_lang_not_available">Η γλώσσα δεν είναι διαθέσιμη.</string>
   <string name="speak_queue">Σειρά αναμονής</string>
   <string name="speak_repeat">Επανάληψη</string>
+  <!--Speak - Bible-->
+  <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
+  <!--List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
   <!--User Notes-->
   <string name="mynotes">Οι σημειώσεις μου</string>
   <string name="mynote">Η σημείωση μου</string>
@@ -212,4 +224,5 @@
   <string name="error_page_too_large">Η σελίδα είναι πολύ μεγάλη για να φορτωθεί</string>
   <string name="error_key_not_in_document">Δεν βρέθηκε στο έγγραφο</string>
   <string name="empty_list">Δεν υπάρχουν στοιχεία για εμφάνιση</string>
+  <!--Notifications-->
 </resources>
