--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -174,6 +174,18 @@
   <string name="tts_lang_not_available">भाषा मौजूद नही</string>
   <string name="speak_queue">पंक्ति में लगाना</string>
   <string name="speak_repeat">दोहराना</string>
+  <!--Speak - Bible-->
+  <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
+  <!--List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
   <!--User Notes-->
   <string name="mynotes">मेरे टिप्पणीयां</string>
   <string name="mynote">मेरे टिप्पणी</string>
@@ -216,4 +228,5 @@
   <string name="error_page_too_large">पृष्ठ बहुत बड़ी, लोड नहीं हुई</string>
   <string name="error_key_not_in_document">इस किताब में नहीं मिला</string>
   <string name="empty_list">कुछ मौजूद नहीं</string>
+  <!--Notifications-->
 </resources>
