--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -129,6 +129,18 @@
   <string name="tts_lang_not_available">言語は使用できません。</string>
   <string name="speak_queue">キュー</string>
   <string name="speak_repeat">繰り返す</string>
+  <!--Speak - Bible-->
+  <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
+  <!--List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
   <!--User Notes-->
   <string name="mynotes">マイメモ</string>
   <string name="mynote">マイメモ</string>
@@ -163,4 +175,5 @@
   <string name="error_page_too_large">このページは多すぎて呼び付けません。</string>
   <string name="error_key_not_in_document">文書から探す事ができません。</string>
   <string name="empty_list">アイテムなし</string>
+  <!--Notifications-->
 </resources>
