--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -203,6 +203,18 @@
   <string name="tts_lang_not_available">언어는 사용할 수 없습니다.</string>
   <string name="speak_queue">대기열</string>
   <string name="speak_repeat">반복</string>
+  <!--Speak - Bible-->
+  <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
+  <!--List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
   <!--User Notes-->
   <string name="mynotes">내 참고들</string>
   <string name="mynote">내 참고</string>
@@ -250,4 +262,5 @@
   <string name="error_page_too_large">페이지가 커서 불러올 수 없습니다.</string>
   <string name="error_key_not_in_document">문서에서 찾을 수 없음</string>
   <string name="empty_list">표시할 항목이 없습니다</string>
+  <!--Notifications-->
 </resources>
