--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -208,6 +208,18 @@
   <string name="tts_lang_not_available">Språket er ikke tilgjengelig.</string>
   <string name="speak_queue">Legg i kø</string>
   <string name="speak_repeat">Repeter</string>
+  <!--Speak - Bible-->
+  <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
+  <!--List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
   <!--User Notes-->
   <string name="mynotes">Mine notater</string>
   <string name="mynote">Mine notater</string>
@@ -255,4 +267,5 @@
   <string name="error_page_too_large">Siden er for stor til å laste inn</string>
   <string name="error_key_not_in_document">Ikke funnet i modulen</string>
   <string name="empty_list">Ingen data å vise</string>
+  <!--Notifications-->
 </resources>
