--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -198,6 +198,18 @@
   <string name="tts_lang_not_available">Språket är inte tillgängligt.</string>
   <string name="speak_queue">Kö</string>
   <string name="speak_repeat">Upprepa</string>
+  <!--Speak - Bible-->
+  <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
+  <!--List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
   <!--User Notes-->
   <string name="mynotes">Anteckningar</string>
   <string name="mynote">Anteckning</string>
@@ -242,4 +254,5 @@
   <string name="error_page_too_large">Sidan är för stor för att laddas</string>
   <string name="error_key_not_in_document">Hittades inte i bok</string>
   <string name="empty_list">Inga poster att visa</string>
+  <!--Notifications-->
 </resources>
