--- a/app/src/main/res/values-sw/strings.xml
+++ b/app/src/main/res/values-sw/strings.xml
@@ -237,6 +237,18 @@
   <string name="tts_lang_not_available">Lugha hii haipatikani</string>
   <string name="speak_queue">Ingiza kwenye mlolongo</string>
   <string name="speak_repeat">Rudia</string>
+  <!--Speak - Bible-->
+  <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
+  <!--List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
   <!--User Notes-->
   <string name="mynotes">Mawazo yangu</string>
   <string name="mynote">Wazo langu</string>
@@ -285,5 +297,6 @@
   <string name="error_page_too_large">Ukurasa ni mkubwa mno, haiwezekani kuuonyesha</string>
   <string name="error_key_not_in_document">Haijapatikana katika makala</string>
   <string name="empty_list">Hakuna la kuonyesha</string>
+  <!--Notifications-->
   <string name="notification_channel_progress_status">eneo taarifa kwa maendeleo ya upakuaji n.k.</string>
 </resources>
