--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -208,6 +208,18 @@
   <string name="tts_lang_not_available">Dil bulunmadı.</string>
   <string name="speak_queue">Sıra</string>
   <string name="speak_repeat">Tekrar</string>
+  <!--Speak - Bible-->
+  <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
+  <!--List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
   <!--User Notes-->
   <string name="mynotes">Notlarım</string>
   <string name="mynote">Notum</string>
@@ -255,4 +267,5 @@
   <string name="error_page_too_large">Sayfa yüklenmek için fazla büyük</string>
   <string name="error_key_not_in_document">Belgede bulunmadı</string>
   <string name="empty_list">Öğe bulunmadı</string>
+  <!--Notifications-->
 </resources>
