--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -179,6 +179,18 @@
   <string name="tts_lang_not_available">不支持汉语朗读功能</string>
   <string name="speak_queue">队列</string>
   <string name="speak_repeat">重复</string>
+  <!--Speak - Bible-->
+  <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
+  <!--List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings.-->
   <!--User Notes-->
   <string name="mynotes">笔记列表</string>
   <string name="mynote">我的笔记</string>
@@ -221,4 +233,5 @@
   <string name="error_page_too_large">本页太大，无法加载</string>
   <string name="error_key_not_in_document">文档内没有发现</string>
   <string name="empty_list">无可显示单元</string>
+  <!--Notifications-->
 </resources>
