--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -13,7 +13,7 @@
   <string name="search">Rechercher</string>
   <string name="settings">Paramètres</string>
   <string name="history">Historique</string>
-  <string name="speak">Écouter</string>
+  <string name="speak">Écoute du texte</string>
   <string name="help">Aide</string>
   <string name="verse">Verset</string>
   <string name="administration">Gérer</string>
@@ -70,7 +70,7 @@
   <string name="prefs_section_title_summary">Affiche les titres de section non-canonique</string>
   <string name="prefs_red_letter_title">Paroles de Christ</string>
   <string name="prefs_red_letter_summary">Affiche les paroles de Christ en rouge</string>
-  <string name="prefs_tilt_to_scroll_title">Défilement par inclinaison</string>
+  <string name="prefs_tilt_to_scroll_title">Défilement par basculement</string>
   <string name="prefs_tilt_to_scroll_summary">L\'inclinaison de l\'appareil fait défiler la page vers le bas</string>
   <string name="prefs_night_mode_title">Mode nuit</string>
   <string name="prefs_night_mode_summary">Facilite la lecture dans la pénombre</string>
@@ -82,7 +82,7 @@
   <string name="prefs_text_size_title">Taille du texte</string>
   <string name="prefs_text_size_summary">Sélectionne la taille du texte</string>
   <string name="prefs_text_size_sample_text">Exemple de texte</string>
-  <string name="prefs_screen_keep_on_title">Maintenir allumé</string>
+  <string name="prefs_screen_keep_on_title">Bloquer la mise en veille automatique</string>
   <string name="prefs_screen_keep_on_summary">Maintient l\'écran allumé</string>
   <string name="x_minutes">%d minutes</string>
   <string name="prefs_interface_locale_title">Langue de l\'application</string>
@@ -96,7 +96,7 @@
   <string name="prefs_split_mode_vertical">Vertical</string>
   <string name="prefs_split_mode_horizontal">Horizontal</string>
   <string name="prefs_split_mode_automatic">Automatique</string>
-  <string name="prefs_split_mode_summary">Comment diviser l\'écran en plusieurs fenêtres?</string>
+  <string name="prefs_split_mode_summary">Comment diviser l\'écran en plusieurs fenêtres</string>
   <string name="prefs_split_mode_title">Mode multi-fenêtres</string>
   <string name="prefs_request_sdcard_permission_title">Documents à installer manuellement</string>
   <string name="prefs_request_sdcard_permission_summary">Permet d\'installer manuellement des documents à partir du dossier jsword sur la carte SD</string>
@@ -224,20 +224,65 @@
   <string name="speak_queue">File d\'attente</string>
   <string name="speak_repeat">Répéter</string>
   <!--Speak - Bible-->
+  <string name="speak_speed_title">Vitesse de lecture</string>
+  <string name="speak_and_play_earcons_title">Lire et jouer des effets sonores pour </string>
+  <string name="playback_settings_title">Paramètres de lecture</string>
+  <string name="speak_settings_title">Paramètres généraux de la voix</string>
+  <string name="speak_bookmarking_settings_title">Paramètres des signets</string>
+  <string name="speak_bookmarks_menu_title">Lancer l\'écouter à partir du signet</string>
   <string name="speak_advanced_settings">Paramètres avancés</string>
+  <string name="speak_settings_activity_title">Paramètres avancés de l\'écoute du texte</string>
+  <string name="speak_sleep_timer_title">Mise en sommeil</string>
+  <string name="speak_no_books_available">Pas de livre disponible à écouter</string>
+  <string name="conf_speak_synchronize">Synchroniser le texte avec la voix</string>
+  <string name="conf_speak_auto_bookmark">Enregistrement automatique en signets</string>
+  <string name="conf_save_playback_settings_to_bookmarks">Enregistrer les paramètres de lecture dans les signets</string>
+  <string name="conf_replace_divinename">Remplacer le nom divin par Yahvé</string>
+  <string name="conf_change_chapter">Changements de chapitre</string>
   <string name="conf_change_title">Titres</string>
   <string name="conf_speak_footnotes">Notes de bas de page</string>
+  <string name="conf_speak_sleep_timer">Programmer la mise en sommeil</string>
+  <string name="conf_speak_multitranslation">Comparer les traductions en lisant dans toutes les fenêtres visibles</string>
+  <string name="sleep_timer_title">Minuterie d\'arrêt en minutes</string>
+  <string name="sleep_timer_set">Mise en sommeil programmée : %d minutes</string>
+  <string name="sleep_timer_started">Minuteur démarré, %d minutes</string>
+  <string name="sleep_timer_active_at">Mise en sommeil : reste %s minutes</string>
+  <string name="speak_next">Suivant</string>
+  <string name="speak_previous">Précédent</string>
+  <string name="widget_toggle_sleep_timer">Inverser la mise en sommeil</string>
+  <string name="widget_bookmark_helptext">Les boutons de signets d\'écoute du texte seront affichés ici</string>
+  <string name="speak_status_stopped">arrêt</string>
+  <string name="speak_bookmark_help">Aide des signets d\'écoute</string>
+  <string name="speak_help_auto_bookmark">Un Signet d\'écoute est automatiquement inséré lorsque l\'écoute est mise sur pause ou arrêt. Les signets ainsi générés ont pour label Écoute du texte. Si l\'écoute redémarre à partir du signet, il est ensuite décalé au verset sur lequel l\'écoute est mise en pause ou arrêt. Seuls les signets de type Écoute du texte sont modifiés, les autres signets restent inchangés.</string>
+  <string name="speak_help_playback_settings">Les paramètres d\'écoute (section Paramètres de lecture dans la page Écoute du texte) sont enregistrés avec les signets d\'écoute, si ce paramètre est activé.
+Lorsque la lecture redémarre à partir d\'un signet d\'écoute, les paramètres de lecture sont rechargés depuis le signet.</string>
+  <string name="speak_help_playback_settings_example">Par exemple, si vous écoutez Genèse et Romains et désirez écouter Genèse à bonne vitesse sans notifications de changement de chapitres, mais Romains lentement avec un effet sonore en tête de chapitre, vous aurez des paramètres différents pour écouter ces livres si l\'enregistrement des paramètres dans les signets correspondants est activé.</string>
   <!--List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
          if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
 
          Please note that this is not translation but you need to think about what words need to be replaced
          in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
          in speak settings.-->
+  <string-array name="speak_divinename_original">
+    <item>Seigneur</item>
+    <item>Dieu</item>
+    <item></item>
+    <item></item>
+    <item></item>
+  </string-array>
   <!--List of (max 5) words that we will replace those words listed in divinename_original.
 
          Please note that this is not translation but you need to think about what words need to be replaced
          in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
          in speak settings.-->
+  <string-array name="speak_divinename_replace">
+    <item>Yahvé</item>
+    <item>Yahvé</item>
+    <item></item>
+    <item></item>
+    <item></item>
+  </string-array>
+  <string name="speak_book_changed">Changement de livre.</string>
   <string name="speak_chapter_changed">Chapitre</string>
   <string name="speak_first">Premier</string>
   <string name="speak_second">Second</string>
@@ -292,6 +337,9 @@
   <string name="error_page_too_large">La page est trop lourde pour être chargée</string>
   <string name="error_key_not_in_document">Aucune correspondance dans le document</string>
   <string name="empty_list">Aucun élément à afficher</string>
+  <string name="add_widget">Ajouter un widget</string>
   <!--Notifications-->
+  <string name="download_documents">Téléchargement des documents</string>
+  <string name="notification_channel_tts_status">Lecture de texte</string>
   <string name="notification_channel_progress_status">État d\'avancement de la notification de téléchargement des documents etc.</string>
 </resources>
